Closed
Bug 626608
Opened 15 years ago
Closed 15 years ago
Crash [@ nsNPAPIPluginStreamListener::HandleRedirectNotification ]
Categories
(Core Graveyard :: Plug-ins, defect)
Tracking
(blocking2.0 final+)
RESOLVED
FIXED
Tracking | Status | |
---|---|---|
blocking2.0 | --- | final+ |
People
(Reporter: scoobidiver, Assigned: jaas)
Details
(Keywords: crash, regression, topcrash, Whiteboard: [hardblocker][has patch])
Crash Data
Attachments
(1 file)
849 bytes,
patch
|
benjamin
:
review+
|
Details | Diff | Splinter Review |
It is #14 top crasher on Mac OS X in 4.0b9 for the last week.
Signature nsNPAPIPluginStreamListener::HandleRedirectNotification
UUID a954d23d-251c-4568-82a2-cde532110117
Time 2011-01-17 13:43:40.11957
Uptime 244863
Install Age 244863 seconds (2.8 days) since version was first installed.
Product Firefox
Version 4.0b9
Build ID 20110110191913
Branch 2.0
OS Mac OS X
OS Version 10.6.6 10J567
CPU amd64
CPU Info family 6 model 23 stepping 6
Crash Reason EXC_BAD_ACCESS / 0x0000000d
Crash Address 0x0
App Notes Renderers: 0x22600,0x20400
Frame Module Signature [Expand] Source
0 XUL nsNPAPIPluginStreamListener::HandleRedirectNotification modules/plugin/base/src/nsNPAPIPluginStreamListener.cpp:878
1 XUL nsPluginStreamListenerPeer::AsyncOnChannelRedirect modules/plugin/base/src/nsPluginStreamListenerPeer.cpp:1297
2 XUL nsAsyncRedirectVerifyHelper::DelegateOnChannelRedirect netwerk/base/src/nsAsyncRedirectVerifyHelper.cpp:180
3 XUL nsAsyncRedirectVerifyHelper::Run netwerk/base/src/nsAsyncRedirectVerifyHelper.cpp:274
4 XUL nsThread::ProcessNextEvent xpcom/threads/nsThread.cpp:633
5 XUL NS_ProcessPendingEvents_P nsThreadUtils.cpp:200
6 XUL nsBaseAppShell::NativeEventCallback widget/src/xpwidgets/nsBaseAppShell.cpp:132
7 XUL nsAppShell::ProcessGeckoEvents widget/src/cocoa/nsAppShell.mm:399
8 CoreFoundation CoreFoundation@0x4e400
9 CoreFoundation CoreFoundation@0x4c5f8
More reports at:
http://crash-stats.mozilla.com/report/list?product=Firefox&version=Firefox%3A4.0b9&platform=mac&query_search=signature&query_type=exact&query=&range_value=1&range_unit=weeks&hang_type=any&process_type=any&plugin_field=&plugin_query_type=&plugin_query=&do_query=1&admin=&signature=nsNPAPIPluginStreamListener%3A%3AHandleRedirectNotification
Regression from bug 475991?
![]() |
Reporter | |
Comment 2•15 years ago
|
||
It is #4 top crasher on Mac OS X in 4.0b10 over the last week.
blocking2.0: --- → ?
Keywords: topcrash
Updated•15 years ago
|
blocking2.0: ? → final+
Keywords: regression
Updated•15 years ago
|
Whiteboard: [hardblocker]
I haven't had time to look into this properly yet but at a glance we might need to do something like this (check CanFireNotifications() on the plugin instance).
Comment on attachment 509153 [details] [diff] [review]
fix v1.0
We should probably be doing this anyway so I'll request review.
Attachment #509153 -
Flags: review?(benjamin)
Updated•15 years ago
|
Whiteboard: [hardblocker] → [hardblocker][has patch]
Updated•15 years ago
|
Attachment #509153 -
Flags: review?(benjamin) → review+
pushed fix v1.0 to mozilla-central but leaving this bug open until we get some indication that the fix actually worked
http://hg.mozilla.org/mozilla-central/rev/a82d1ab8f010
no crashes since this landed, can re-open if we see more
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Comment 7•15 years ago
|
||
Just seen this in 4.0b11.
![]() |
Reporter | |
Comment 8•15 years ago
|
||
> Just seen this in 4.0b11.
The 4.0b11 build ID is 20110203 and the patch has landed in 4.0b12pre/20110205, so it is normal.
Updated•14 years ago
|
Crash Signature: [@ nsNPAPIPluginStreamListener::HandleRedirectNotification ]
Updated•3 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•