Bug 626608: Make sure plugin is in a state to receive callbacks before calling NPP_UrlRedirectNotify. r=bsmedberg a=blocking2.0final+